--- a/opm/templates/home/adminHeaderFooter.html
+++ b/opm/templates/home/adminHeaderFooter.html
@@ -46,7 +46,7 @@
         <ul id="dropdown1" class="dropdown-content">
             <li><a href="{% url 'createuser' %}">Create User Accounts</a></li>
           <li><a href="{% url 'listofusers' %}">View List of Users</a></li>
-          <li><a href="{% url 'changeuserofdevice' %}">Change User of Device</a></li>
+          <li><a href="{% url 'changeuserofdevice' %}">Manage Devices</a></li>
           <li><a href="{% url 'filloutmedicalform' %}">Fill Out Medical Form</a></li>
         </ul>
         <nav class="z-depth-0" style="padding: 0px 10px 0px 10px; background-color: rgba(255, 255, 255, 0.2);">
@@ -68,7 +68,7 @@
             <li><a href="{% url 'home' %}" class="black-text"><i class="material-icons left black-text">home</i>Homepage</a></li>
             <li><a href="{% url 'createuser' %}" class="black-text"><i class="material-icons left black-text">account_circle</i>Create User Accounts</a></li>
             <li><a href="{% url 'listofusers' %}" class="black-text"><i class="material-icons left black-text">list</i>View List of Users</a></li>
-            <li><a href="{% url 'changeuserofdevice' %}" class="black-text"><i class="material-icons left black-text">devices</i>Change User of Device</a></li>
+            <li><a href="{% url 'changeuserofdevice' %}" class="black-text"><i class="material-icons left black-text">devices</i>Manage Devices</a></li>
             <li><a href="{% url 'filloutmedicalform' %}" class="black-text"><i class="material-icons left black-text">insert_drive_file</i>Fill Out Medical Form</a></li>
             <li><a href="{% url 'index' %}" class="black-text"><i class="material-icons left black-text" >input</i>Log Out</a></li>
         </ul>
