--- a/opm/templates/home/adminBody.html
+++ b/opm/templates/home/adminBody.html
@@ -2,7 +2,13 @@
 {% load staticfiles%}
 
 {% block content %}
-
+    <style>
+    select{
+        display: block;
+    }
+    </style>
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/dt-1.10.18/b-1.5.4/datatables.min.css"/>
+    <script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.10.18/b-1.5.4/datatables.min.js"></script>
     <title>OPHM - Homepage</title>
     <div class ="white">
             <div class="row white">
@@ -24,15 +30,15 @@
 
                     <h5><i class="material-icons left">access_time</i><b>Clock</b></h5><br/>
 
-                    <div class="col s12 yellow lighten-3 z-depth-1 center" style="padding: 3%; border-radius: 10px;">
-                        <h3><center>{% now "F t, Y" %}</center></h3>
-                        <h2><b><p id="txt" align="center"></p></b></h2>
+                    <div class="col s12 teal lighten-2 z-depth-1 center" style="padding: 3%; border-radius: 10px;">
+                        <h3><center class="white-text">{% now "F t, Y" %}</center></h3>
+                        <h2><b><p class="white-text" id="txt" align="center"></p></b></h2>
                     </div>
 
                 </div>
                 <div class="col s12 m4 l4 white">
-                    <h5><i class="material-icons left">group</i><b>Newly Added Users</b></h5><br/>
-                    <div class="col s12 green lighten-2 z-depth-1" style="padding: 3.5%; border-radius: 10px;">
+                    <h5><i class="material-icons left" >group</i><b>Newly Added Users</b></h5><br/>
+                    <div class="col s12 teal z-depth-1" style="padding: 3.5%; border-radius: 10px;">
                          <span class="white-text">
                          <center>
                          <table class="white-text centered">
@@ -42,7 +48,7 @@
                              </thead>
                          </table>
                          </center>
-                         <div style="height: 130px;border:1px solid #ccc; overflow:auto; padding: 1%;">
+                         <div style="height: 130px; overflow:auto; padding: 1%;">
                              <table class="white-text centered">
                              <tbody>
                              {% for newuser in newusers %}
@@ -55,7 +61,7 @@
                          </table>
                          </div>
                              <br/>
-                             <div class="center"><a href="{% url 'listofusers' %}" class="waves-effect waves-light btn green darken-2">View All Users</a></div>
+                             <div class="center"><a href="{% url 'listofusers' %}" class="waves-effect waves-light btn teal darken-3">View All Users</a></div>
 
                         </span>
                     </div>
@@ -63,7 +69,7 @@
                 </div>
                 <div class="col s12 m4 l4">
                     <h5><i class="material-icons left">group</i><b>Last Log In</b></h5><br/>
-                    <div class="col s12 teal lighten-2 z-depth-1" style="padding: 3.5%; border-radius: 10px;">
+                    <div class="col s12 teal darken-2 z-depth-1" style="padding: 3.5%; border-radius: 10px;">
                          <span class="white-text">
                          <table class="white-text centered">
                                  <thead>
@@ -71,7 +77,7 @@
                                     <th>Last Log In Time</th>
                                  </thead>
                          </table>
-                         <div style="height: 187px;border:1px solid #ccc; overflow:auto; padding: 1%;">
+                         <div style="height: 187px; overflow:auto; padding: 1%;">
                              <table class="white-text centered">
                                  <tbody>
                                  {% for user in allusers %}
@@ -94,30 +100,30 @@
                 <div class="col s12 m12 l12">
                     <h5><i class="material-icons left">group</i><b>Devices Currently In Use</b></h5>
                     <a href="{% url 'changeuserofdevice' %}" class="waves-effect waves-light btn">Assign Devices</a>
-
+                <br><br>
                     <center>
-                        <table class="centered">
-
-                            <thead><tr>
-
-                                <th>Device ID</th>
-                                <th>Assigned Patient</th>
-                            </tr></thead>
-                        {% if device_list.count == 0 %}
-                            <b>No devices</b>
-                        {% else %}
-                            {% for device in device_list %}
-                                <tr>
-                                    <td>{{ device.deviceid }}</td>
-                                    {% for patient in patient_device_list %}
-                                        {% if patient.device_deviceid.deviceid == device.deviceid and patient.inuse == 1 %}
-                                            <td>{{ patient.patient_patientid.userid.auth_user_id.first_name }} {{ patient.patient_patientid.userid.auth_user_id.last_name }}</td>
-                                        {% endif %}
-                                    {% endfor %}
-                                </tr>
+                        <table id="patientsTable" class="cell-border" style="width:100%">
+                        <thead>
+                            <tr>
+                                <th>Patient Name</th>
+                                <th>Device Assigned</th>
+                                <th>Doctor Assigned</th>
+                                <th>Device Return Deadline Date</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for patient in patient_list %}
+                                {% if patient.currentdeviceid != 0 %}
+                                    <tr>
+                                        <td>{{ patient.userid.auth_user_id.first_name }} {{ patient.userid.auth_user_id.last_name }}</td>
+                                        <td>{{ patient.currentdeviceid }}</td>
+                                        <td>{{ patient.doctorid.userid.auth_user_id.first_name }} {{ patient.doctorid.userid.auth_user_id.last_name }}</td>
+                                        <td>{{ patient.deadlinereturndate }}</td>
+                                    </tr>
+                                {% endif %}
                             {% endfor %}
-                        {% endif %}
-                        </table>
+                        </tbody>
+                    </table>
                     </center>
 
                 </div>
@@ -125,6 +131,12 @@
             </div>
         </div>
 
-
+<script>
+$(document).ready(function() {
+    $('#patientsTable').DataTable({
+        "order": [[ 1, "asc" ]]
+    });
+});
+</script>
 {% endblock %}
 
