--- a/opm/templates/home/doctorHeaderFooter.html
+++ b/opm/templates/home/doctorHeaderFooter.html
@@ -62,7 +62,7 @@
         <ul id="dropdown1" class="dropdown-content">
           <li><a href="{% url 'managedoctoraccount' %}">Manage Account</a></li>
           <li><a href="{% url 'viewassignedpatients'%}">List of Assigned Patients</a></li>
-          <li><a href="{% url 'managedevicerecording' %}">Manage Device Recordings</a></li>
+          <li><a href="{% url 'managedevicerecording' %}">Manage Assigned Devices</a></li>
         </ul>
         <nav class="z-depth-0" style="padding: 0px 10px px 10px; background-color: rgba(255, 255, 255, 0.2);">
             <div class="nav-wrapper">
@@ -77,6 +77,13 @@
                                 Notifications
                         </a>
                     </li>
+                    <li>
+                        <a href="{% url 'alerts' %}" class="white-text" id="alerts">
+                                <i class="material-icons left white-text" style="margin-right: 15px">warning</i>
+                                <small style="display: none" class="notification-badge">5</small>
+                                Alerts
+                        </a>
+                    </li>
                   <!-- Dropdown Trigger -->
                     <li><a class="dropdown-trigger" href="#!" data-target="dropdown1"><i class="material-icons left">view_list</i>Modules<i class="material-icons right">arrow_drop_down</i></a></li>
                     <li><a href="{% url 'index' %}" class="white-text"><i class="material-icons left white-text">input</i>Log Out</a></li>
@@ -85,10 +92,15 @@
         </nav>
 
         <ul class="sidenav" id="mobile-nav">
-            <li><a href="#" class="black-text"><i class="material-icons left black-text">home</i>Homepage</a></li>
+            <li><a href="{% url 'home' %}" class="black-text"><i class="material-icons left black-text">home</i>Homepage</a></li>
+            <a href="{% url 'alerts' %}" class="white-text" id="alerts">
+                <i class="material-icons left white-text" style="margin-right: 15px">notification_important</i>
+                <small style="display: none" class="notification-badge">5</small>
+                Alerts
+            </a>
             <li><a href="{% url 'managedoctoraccount' %}" class="black-text"><i class="material-icons left black-text">person</i>Manage Account</a></li>
             <li><a href="{% url 'viewassignedpatients'%}" class="black-text"><i class="material-icons left black-text">list</i>List of Assigned Patients</a></li>
-            <li><a href="{% url 'home' %}" class="black-text"><i class="material-icons left black-text">video_label</i>Manage Assigned Devices</a></li>
+            <li><a href="{% url 'managedevicerecording' %}" class="black-text"><i class="material-icons left black-text">video_label</i>Manage Assigned Devices</a></li>
             <li><a href="{% url 'index' %}" class="black-text"><i class="material-icons left black-text" >input</i>Log Out</a></li>
         </ul>
 
@@ -119,30 +131,64 @@
     </body>
 <script>
     $(document).ready(function() {
-
         $.ajax({
-        url: '{% url 'get_notification_count' %}',
-        data: {
-        },
-        dataType: 'json',
-        success: function (data) {
-            if(data[0] == 0){
-                var notification = "<i class=\"material-icons left white-text\" style=\"margin-right: 15px\">notification_important</i>\n" +
-                "                                <small style=\"display: none\" class=\"notification-badge\">"+data[0]+"</small>\n" +
-                "                                Notifications";
+            url: '{% url 'get_alerts_count' %}',
+            data: {
+            },
+            dataType: 'json',
+            success: function (data) {
+                var notification = "";
+                if(data[0] == 0){
+                    notification = "<i class=\"material-icons left white-text\" style=\"margin-right: 15px\">warning</i>\n" +
+                    "                                <small style=\"display: none\" class=\"notification-badge\">"+data[0]+"</small>\n" +
+                    "                                Alerts";
 
-                $("#notificationCountDashboard").html("No new notifications.");
+                    $("#notificationCountDashboard").html("No new alerts.");
+                }
+                else{
+                    if(data[0] > 99){
+                        notification = "<i class=\"material-icons left white-text\" style=\"margin-right: 10px\">warning</i>\n" +
+                    "                                <small class=\"notification-badge\">99+</small>\n" +
+                    "                                Alerts";
+                        $("#notificationCountDashboard").html("You got 99+ alerts.");
+                    }
+                    else{
+                        notification = "<i class=\"material-icons left white-text\" style=\"margin-right: 10px\">warning</i>\n" +
+                    "                                <small class=\"notification-badge\">"+data[0]+"</small>\n" +
+                    "                                Alerts";
+                        $("#notificationCountDashboard").html("You got "+data[0]+" alerts.");
+                    }
+                }
+                $("#alerts").html(notification);
             }
-            else{
-                var notification = "<i class=\"material-icons left white-text\" style=\"margin-right: 10px\">notification_important</i>\n" +
-                "                                <small class=\"notification-badge\">"+data[0]+"</small>\n" +
-                "                                Notifications";
-
-                $("#notificationCountDashboard").html("You got "+data[0]+" notifications.");
+          });
+        $.ajax({
+            url: '{% url 'get_notification_count' %}',
+            data: {
+            },
+            dataType: 'json',
+            success: function (data) {
+                var notification = "";
+                if(data[0] == 0){
+                    notification = "<i class=\"material-icons left white-text\" style=\"margin-right: 15px\">notification_important</i>\n" +
+                    "                                <small style=\"display: none\" class=\"notification-badge\">"+data[0]+"</small>\n" +
+                    "                                Notifications";
+                }
+                else{
+                    if(data[0] > 99){
+                        notification = "<i class=\"material-icons left white-text\" style=\"margin-right: 10px\">notification_important</i>\n" +
+                    "                                <small class=\"notification-badge\">99+</small>\n" +
+                    "                                Notifications";
+                    }
+                    else{
+                        notification = "<i class=\"material-icons left white-text\" style=\"margin-right: 10px\">notification_important</i>\n" +
+                    "                                <small class=\"notification-badge\">"+data[0]+"</small>\n" +
+                    "                                Notifications";
+                    }
+                }
+                $("#notifications").html(notification);
             }
-            $("#notifications").html(notification);
-        }
-      });
+        });
     });
 </script>
 </html>
