--- a/opm/templates/home/patientHeaderFooter.html
+++ b/opm/templates/home/patientHeaderFooter.html
@@ -12,6 +12,20 @@
 
 <link rel="icon" href="{% static 'img/Logo_Colored.png' %}">
 
+<style>
+    .notification-badge {
+        position: relative;
+        right: 5px;
+        top: -20px;
+        color: #fff8fd;
+        background-color: #f50002;
+        margin: 0 -.8em;
+        border-radius: 50%;
+        padding: 5px 10px;
+    }
+</style>
+
+
 <script>
     $(document).ready(function(){
         $('.sidenav').sidenav();
@@ -24,6 +38,7 @@
         <!--------------------------------------------------------- START / NAV BAR --------------------------------------------------------->
 
         <ul id="dropdown1" class="dropdown-content">
+            <li><a href="{% url "faqs" %}">Frequently Asked Questions</a></li>
           <li><a href="{% url "managepatientaccount" %}">Manage Account</a></li>
             <li><a href="{% url "viewhistoryofvitals" %}">View History of Records</a></li>
           <li><a href="{% url "restrictuseraccess" %}">Restrict User Access</a></li>
@@ -34,6 +49,13 @@
                 <a href="#" class="sidenav-trigger" data-target="mobile-nav"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="{% url "home" %}" class="white-text"><i class="material-icons left white-text">home</i>Homepage</a></li>
+                    <li>
+                        <a href="{% url 'notifications' %}" class="white-text" id="notifications">
+                                <i class="material-icons left white-text" style="margin-right: 15px">notification_important</i>
+                                <small style="display: none" class="notification-badge">5</small>
+                                Notifications
+                        </a>
+                    </li>
                   <!-- Dropdown Trigger -->
                     <li><a class="dropdown-trigger" href="#!" data-target="dropdown1"><i class="material-icons left">view_list</i>Modules<i class="material-icons right">arrow_drop_down</i></a></li>
                     <li><a href="{% url "index" %}" class="white-text"><i class="material-icons left white-text">input</i>Log Out</a></li>
@@ -43,6 +65,7 @@
 
         <ul class="sidenav" id="mobile-nav">
             <li><a href="{% url "home" %}" class="black-text"><i class="material-icons left black-text">home</i>Homepage</a></li>
+            <li><a href="{% url "faqs" %}" class="black-text"><i class="material-icons left black-text">lock</i>Frequently Asked Questions</a></li>
             <li><a href="{% url "managepatientaccount" %}" class="black-text"><i class="material-icons left black-text">person</i>Manage Account</a></li>
             <li><a href="{% url "viewhistoryofvitals" %}" class="black-text"><i class="material-icons left black-text">description</i>View History of Records</a></li>
             <li><a href="{% url "restrictuseraccess" %}" class="black-text"><i class="material-icons left black-text">lock</i>Restrict User Access</a></li>
@@ -75,4 +98,35 @@
             </footer>
         </div>
     </body>
+<script>
+    $(document).ready(function() {
+        $.ajax({
+            url: '{% url 'get_notification_count' %}',
+            data: {
+            },
+            dataType: 'json',
+            success: function (data) {
+                var notification = "";
+                if(data[0] == 0){
+                    notification = "<i class=\"material-icons left white-text\" style=\"margin-right: 15px\">notification_important</i>\n" +
+                    "                                <small style=\"display: none\" class=\"notification-badge\">"+data[0]+"</small>\n" +
+                    "                                Notifications";
+                }
+                else{
+                    if(data[0] > 99){
+                        notification = "<i class=\"material-icons left white-text\" style=\"margin-right: 10px\">notification_important</i>\n" +
+                    "                                <small class=\"notification-badge\">99+</small>\n" +
+                    "                                Notifications";
+                    }
+                    else{
+                        notification = "<i class=\"material-icons left white-text\" style=\"margin-right: 10px\">notification_important</i>\n" +
+                    "                                <small class=\"notification-badge\">"+data[0]+"</small>\n" +
+                    "                                Notifications";
+                    }
+                }
+                $("#notifications").html(notification);
+            }
+        });
+    });
+</script>
 </html>
